# Pandemonic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-assets.cmake  copy-dlls.cmake  imgui.ini  main.cpp
assets/graphics/sprites/: animations.json
assets/graphics/sprites/enemies/baroness/: baroness.xcf
assets/graphics/sprites/enemies/imp/: imp.xcf
assets/graphics/sprites/item/: throwing_knives.xcf
assets/graphics/sprites/items/: hp_potion.xcf  mp_potion.xcf
assets/graphics/sprites/player/unfinished/: aerial-inv.xcf  aerial.xcf  casting.xcf
assets/tilemaps/: -1.tmx  -2.tmx  0.tmx  1.tmx  2.tmx  3.tmx  forest_east.tmx  forest_west.tmx  home_village.tmx  world.world
common/: ResourceManager.cpp  ResourceManager.hpp  shader.cpp
data/: dialogs.json
include/: Config.hpp  Game.hpp  config.h  config.hpp  game.h
include/camera/: Camera.hpp
include/common/: Animator.hpp  Physics.hpp  Shader.hpp
include/engine/camera/: Camera.hpp  camera.h
include/engine/common/: Animator.hpp  Constants.hpp  Physics.hpp  Util.hpp  animator.h  constants.h  physics.h  shader.h  texture.h  types.h  types.hpp  util.h
include/engine/frame_buffer/: FrameBuffer.hpp
include/engine/framebuffer/: framebuffer.h
include/engine/imgui/: ImGuiHelper.hpp  imgui_helper.h
include/engine/managers/: CooldownManager.hpp  MapManager.hpp  ResourceManager.hpp  cooldown_manager.h  map_manager.h  resource_manager.h
include/engine/renderers/: DialogBoxRenderer.hpp  MapRenderer.hpp  Renderer.hpp  SpriteRenderer.hpp  TextRenderer.hpp  UserInterfaceRenderer.hpp  dialog_box_renderer.h  map_renderer.h  renderer.h  sprite_renderer.h  text_renderer.h  user_interface_renderer.h
include/engine/sprite/: Sprite.hpp
include/engine/store/: map_store.h  resource_store.h
include/engine/stores/: Store.hpp
include/entities/: entity.h  player.h
include/managers/: MapManager.hpp  ResourceManager.hpp
include/renderers/: MapRenderer.hpp  SpriteRenderer.hpp
include/sprites/: Player.hpp  Sprite.hpp
include/store/: DialogStore.hpp  MapStore.hpp  PlayerStore.hpp  Store.hpp  dialog_store.h  game_store.h  player_store.h
include/ui/: UserInterface.hpp  user_interface.h
include/ui/popups/: DialogBox.hpp  dialog_box.h
include/userInterface/: UserInterface.hpp
include/util/: logger.h
shaders/: sprite.fs  sprite.vs  tile.fs  tile.fs.glsl  tile.vs  tile.vs.glsl
shaders/debug/: hitbox.fs
shaders/map/: tile.fs  tile.vs
shaders/sprite/: sprite.fs
shaders/text/: glyph.fs  glyph.vs
shaders/ui/: statusBar.fs  statusBar.vs  ui.fs
shaders/userInterface/: statusBar.fs  ui.fs  ui.vs
src/: Config.cpp  Game.cpp  Game.hpp  MapLoader.cpp  MapManager.cpp  Renderer.cpp  Renderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  config.cpp  config.hpp  game.cpp  main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/common/: Animator.cpp  Physics.cpp  Physics.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Texture.cpp  Util.cpp  Util.hpp  shader.cpp  texture.cpp  texture.hpp
src/engine/camera/: Camera.cpp  camera.cpp
src/engine/common/: Animator.cpp  Physics.cpp  Shader.cpp  Texture.cpp  animator.cpp  physics.cpp
src/engine/frame_buffer/: FrameBuffer.cpp
src/engine/framebuffer/: framebuffer.cpp
src/engine/imgui/: ImGuiHelper.cpp  imgui_helper.cpp
src/engine/managers/: CooldownManager.cpp  MapManager.cpp  ResourceManager.cpp  cooldown_manager.cpp  map_manager.cpp  resource_manager.cpp
src/engine/renderers/: DialogBoxRenderer.cpp  MapRenderer.cpp  Renderer.cpp  SpriteRenderer.cpp  TextRenderer.cpp  UserInterfaceRenderer.cpp  dialog_box_renderer.cpp  map_renderer.cpp  renderer.cpp  sprite_renderer.cpp  text_renderer.cpp  user_interface_renderer.cpp
src/engine/sprite/: Sprite.cpp
src/engine/store/: map_store.cpp  resource_store.cpp
src/engine/stores/: Store.cpp
src/entities/: entity.cpp  player.cpp
src/headers/: Game.hpp  GameState.hpp  Main.hpp  MapLoader.hpp  MapManager.hpp  Player.hpp  Sprite.hpp  SpriteRenderer.hpp
src/managers/: MapManager.cpp  ResourceManager.cpp
src/renderers/: MapRenderer.cpp  MapRenderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp
src/sprites/: Sprite.cpp  Sprite.hpp
src/sprites/Player/: Player.cpp  Player.hpp
src/sprites/player/: Player.cpp
src/store/: DialogStore.cpp  MapStore.cpp  PlayerStore.cpp  Store.cpp  dialog_store.cpp  game_store.cpp  map_store.cpp  player_store.cpp
src/ui/: UserInterface.cpp  user_interface.cpp
src/ui/popups/: DialogBox.cpp  dialog_box.cpp
src/userInterface/: UserInterface.cpp
src/util/: logger.cpp
